feat(SPV-1021): bhs merkleroots endpoint (#286)
